--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>Conversation Workflow Sample<br />Jeffrey M. Warner, RN</h1>
     <p>This page demonstrates a synthetic, de-identified workflow representative of my approach to designing clear, safe, multi-turn conversational experiences.</p>
 
-    <h2>🧩 Scenario: Mental Health Intake Assistant</h2>
+    <h2> Scenario: Mental Health Intake Assistant</h2>
     <p>The goal is to guide a user through a sensitive, supportive intake flow while maintaining safety boundaries, predictable structure, and clear escalation logic.</p>
 
     <h2>Conversation Flow (Simplified)</h2>
