add html and head tags

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Symptom Triage</title>
+
 <style>
 .assistant-output {
   white-space: pre-wrap;      /* keep newlines, allow wrapping */
@@ -8,7 +16,7 @@
 }
   
 </style>
-
+</head>
 <h2>Try a Sample Mental Health Intake Prompt</h2>
 <div>
   <textarea id="userInput" rows="4" placeholder="Tell me a bit about how you're feeling today..."></textarea>
@@ -58,3 +66,5 @@
     }
   });
 </script>
+
+</html>
