--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Symptom Triage</title>
-
-<style>
-.assistant-output {
-  white-space: pre-wrap;      /* keep newlines, allow wrapping */
-  word-wrap: break-word;      /* break long words if needed */
-  padding: 0.75rem;
-  background: #f3f3f3;
-  border-radius: 4px;
-}
-  
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <h2>Try a Sample Mental Health Intake Prompt</h2>
 <div>
