--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function injectState(template, state) {
   });
 }
 
-function renderStep() {
+function NEWrenderStep() {
   chatInputAreaEl.innerHTML = ""; // clear previous input area
 
   if (currentStepIndex >= conversationScript.length) {
@@ -290,7 +290,7 @@ function renderStep() {
 }
 
         
-  function XXXrenderStep() {
+  function renderStep() {
     chatInputAreaEl.innerHTML = ""; // clear previous input area
 
     if (currentStepIndex >= conversationScript.length) {
