--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ const conversationScript = [
   let currentStepIndex = 0;
   const state = {}; // where we store user answers by id
 
-  function addBubble(text, role) {
+  function XXXaddBubble(text, role) {
     const bubble = document.createElement("div");
     bubble.className = `chat-bubble ${role}`;
     bubble.textContent = text;
@@ -281,7 +281,95 @@ function NEWrenderStep() {
 }
 
 
-function renderStep() {
+function XXXrenderStep() {
+    chatInputAreaEl.innerHTML = ""; // clear previous input area
+
+    if (currentStepIndex >= conversationScript.length) {
+      // End of script
+      return;
+    }
+
+    const step = conversationScript[currentStepIndex];
+
+    if (step.type === "bot") {
+      const text = typeof step.text === "function" ? step.text(state) : step.text;
+      addBubble(text, "bot");
+      currentStepIndex++;
+      // Automatically move to next step after a short delay
+      setTimeout(renderStep, 700);
+    }
+
+    else if (step.type === "userInput") {
+      // Show prompt as bot, then show a textarea + submit
+      addBubble(step.prompt, "bot");
+
+      const wrapper = document.createElement("div");
+
+      const textarea = document.createElement("textarea");
+      textarea.rows = 3;
+      textarea.placeholder = "Type your response here...";
+
+      const submitBtn = document.createElement("button");
+      submitBtn.textContent = "Submit";
+      submitBtn.className = "primary";
+
+      submitBtn.addEventListener("click", () => {
+        const value = textarea.value.trim();
+        if (!value) return;
+
+        // Add user bubble
+        addBubble(value, "user");
+        state[step.id] = value;
+
+        // Clear input area and move to next step
+        chatInputAreaEl.innerHTML = "";
+        currentStepIndex++;
+        renderStep();
+      });
+
+      wrapper.appendChild(textarea);
+      wrapper.appendChild(submitBtn);
+      chatInputAreaEl.appendChild(wrapper);
+    }
+
+    else if (step.type === "choice") {
+      // Show prompt as bot, then buttons for choices
+      addBubble(step.prompt, "bot");
+
+      const wrapper = document.createElement("div");
+      wrapper.className = "choice-buttons";
+
+      step.choices.forEach((choiceText) => {
+        const btn = document.createElement("button");
+        btn.type = "button";
+        btn.textContent = choiceText;
+
+        btn.addEventListener("click", () => {
+          // When a choice is clicked, show it as a user bubble
+          addBubble(choiceText, "user");
+          state[step.id] = choiceText;
+
+          chatInputAreaEl.innerHTML = "";
+          currentStepIndex++;
+          renderStep();
+        });
+
+        wrapper.appendChild(btn);
+      });
+
+      chatInputAreaEl.appendChild(wrapper);
+    }
+  }
+
+  function addBubble(text, role) {
+    const bubble = document.createElement("div");
+    bubble.className = `chat-bubble ${role}`;
+    bubble.textContent = text;
+    chatLogEl.appendChild(bubble);
+    chatLogEl.scrollTop = chatLogEl.scrollHeight;
+  }
+
+  function renderStep() {
     chatInputAreaEl.innerHTML = ""; // clear previous input area
 
     if (currentStepIndex >= conversationScript.length) {
