--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ const chatLogEl = document.getElementById("chat-log");
     chatLogEl.scrollTop = chatLogEl.scrollHeight;
   }
 
-    async function callLLM(userText) {
-  const response = await fetch("/api/chat", {
+async function callLLM(userText) {
+  const response = await fetch(`${API_BASE}/api/chat`, {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ message: userText })
