--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ const chatLogEl = document.getElementById("chat-log");
   }
 
 async function callLLM(userText) {
-  const response = await fetch(`${API_BASE}/api/chat`, {
+  const response = await fetch(`${API_URL}/api/chat`, {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ message: userText })
