--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ const conversationScript = [
   {"type": "bot", "text": "Hi, I'm here to help you get connected with care."},
   {"type": "llmInput", "id": "presentingConcern", "prompt": "To start, what's the main thing you're hoping to get support with right now?"},
   {"type": "choice", "id": "focusArea", "prompt": "If you had to choose one area to focus on first, which feels most important?", "choices": ["Managing anxiety or stress", "Sleep problems", "Depression"]},
-  {"type": "choice", "id": "button", "prompt": "Got it! We'll keep that in mind as a starting point.","choices":"Thanks"},
+  {"type": "choice", "id": "button", "prompt": "Got it! We'll keep that in mind as a starting point.","choices":["Thanks"]},
 ];
         
         
