--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       return;
     }
 
-    outputEl.textContent = "Thinking...";
+    outputEl.textContent = "...";
 
     try {
       const res = await fetch(API_URL, {
