--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Symptom Triage</title>
 <link rel="stylesheet" type="text/css" href="/Portfolio/styles.css">
 </head>
-<h2>Try a Sample Mental Health Intake Prompt</h2>
+<!-- <h2>Try a Sample Mental Health Intake Prompt</h2>
 <div>
   <textarea id="userInput" rows="4" placeholder="Tell me a bit about how you're feeling today..."></textarea>
   <br />
   <button id="sendRealBtn">Ask the assistant</button>
 </div>
-<pre id="realAssistantOutput" class="assistant-output"></pre>
+<pre id="realAssistantOutput" class="assistant-output"></pre> -->
 
 <h2>Scripted Conversation Flow Demo</h2>
 <p>
-  This example shows a predetermined mental health intake flow with assistant and user messages.
+  This example shows a predetermined hypertension flow with assistant and user messages.
 </p>
 
 <div id="scripted-chat" class="chat-container">
