--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ const conversationScript = [
     type: "bot",
     stepId: "depressionPath",
     next: "depLLM",
-    text: `Thanks for bringing up depression, thatÕs a really important topic.`,
+    text: `Thanks for bringing up depression, that's a really important topic.`,
   },
   {
     type: "llmBot",
