--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ const SCENARIOS = {
     mh_intake: SCRIPT_MH_INTAKE,
 };
     
-let conversationScript = SCENARIOS.hypertension
+var conversationScript = SCENARIOS.hypertension
 const STATICconversationScript = [
   {
     type: "bot",
